--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.10.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^6.4.0"
   },
